新增windows快速升级